--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,7 +1,3 @@
-.panel {
-  text-align: center;
-}
-
 .title {
   font-family: 'Coming Soon', cursive;
   text-align: center;
@@ -81,4 +77,8 @@ input[type="text"] {
   color: #01579B;
   border-radius: 10px;
   font-size: 1.2em;
+}
+
+a {
+  text-decoration: none;
 }
